--- a/monitor/Resource.rc
+++ b/monitor/Resource.rc
@@ -48,7 +48,7 @@ END
 
 
 
-DLG_GRAPHICS DIALOGEX 5, 18, 440, 230
+DLG_GRAPHICS DIALOGEX 5, 18, 480, 230
 CAPTION "Graficos"
  FONT 8, "Tahoma"
  //FONT 8,"MS Shell Dlg",0,0,0x1
@@ -57,7 +57,7 @@ CAPTION "Graficos"
  STYLE DS_MODALFRAME |  WS_CAPTION | WS_SYSMENU|WS_VISIBLE
 BEGIN
  //    CONTROL "", ID_TOOLTIP, TOOLTIPS_CLASS, TTS_ALWAYSTIP |WS_CHILD|WS_VISIBLE , 12, 6, 160, 15
- //      GROUPBOX " ", ID_GRAPH_U,0,0, 435, 116, BS_GROUPBOX
+        GROUPBOX " ", ID_GRAPH_U,20,0, 455, 200, BS_GROUPBOX
  //      GROUPBOX " ", ID_GRAPH_I,0,117, 435, 220, BS_GROUPBOX
 
 END
@@ -69,10 +69,14 @@ CAPTION "Graficos"
  //FONT 8, "MS Sans Serif", 0, 0, 0x1
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU|WS_VISIBLE
 BEGIN
-  LISTBOX ID_VARS, 7, 19, 100, 100, LBS_STANDARD | LBS_SORT
+  LISTBOX ID_VARS, 7, 19, 100, 100, LBS_STANDARD
 //  LTEXT "Select an item:", ID_STATIC, 7, 7, 48, 8, SS_LEFTNOWORDWRAP | WS_GROUP
-  LISTBOX ID_SHOWVARS, 150, 19, 100, 100, LBS_STANDARD | LBS_SORT
-//  LTEXT "Select an item:", ID_STATIC, 7, 7, 48, 8, SS_LEFTNOWORDWRAP | WS_GROUP
+  LISTBOX ID_SHOWVARS, 150, 19, 100, 60, LBS_STANDARD
+
+   GROUPBOX " ", ID_STATIC,150,70, 100, 45, BS_GROUPBOX
+  LTEXT "Guardar como:", ID_STATIC, 180, 80, 48, 8, SS_LEFTNOWORDWRAP
+  EDITTEXT ID_SAVEASFILE,160,90,80,15,ES_LEFT
+
   DEFPUSHBUTTON "->", ID_SELECT, 120, 30, 20, 14
   PUSHBUTTON "<-", ID_DELETE, 120, 60, 20, 14
   PUSHBUTTON "Open", ID_OPEN, 120,90, 20, 14
@@ -93,17 +97,20 @@ CAPTION "Grupo de Baterias"
 BEGIN
        GROUPBOX "Estado da carga", ID_STATIC,320,60, 100, 170, BS_GROUPBOX
 
-       GROUPBOX "Parâmetros", ID_STATIC,20,110, 200, 120, BS_GROUPBOX
-     LTEXT "U_out: ", ID_UOUT, 140, 130, 60, 12, WS_BORDER|SS_CENTER
-      LTEXT "_o_", ID_RI, 140, 150, 60, 12, WS_BORDER|SS_CENTER
-      LTEXT "A/h", ID_AMP_H, 140,170, 60, 12, WS_BORDER|SS_CENTER
-      LTEXT "ºC", ID_TEMP, 140,190, 60, 12, WS_BORDER|SS_CENTER
-      LTEXT "Horas", ID_AUTONOMI, 140,210, 60, 12, WS_BORDER|SS_CENTER
-      LTEXT "Tensão: ", ID_STATIC, 40, 130, 100, 12, SS_RIGHT
-      LTEXT "Resistência interna: ", ID_STATIC, 40, 150, 100, 12, SS_RIGHT
-      LTEXT "Carga actual:", ID_STATIC, 40,170, 100, 12, SS_RIGHT
-      LTEXT "Temperatura:", ID_STATIC, 40,190, 100, 12, SS_RIGHT
-      LTEXT "Autonomia:", ID_STATIC, 40,210, 100, 12, SS_RIGHT
+       GROUPBOX "Parâmetros", ID_STATIC,10,120, 300, 100, BS_GROUPBOX
+     LTEXT "U_out: ", ID_UOUT, 80, 150, 60, 12, WS_BORDER|SS_CENTER
+      LTEXT "A/h", ID_CAPACITY, 80, 170, 60, 12, WS_BORDER|SS_CENTER
+     LTEXT "_o_", ID_RI, 80, 190, 60, 12, WS_BORDER|SS_CENTER
+      LTEXT "A/h", ID_AMP_H, 220,150, 60, 12, WS_BORDER|SS_CENTER
+      LTEXT "ºC", ID_TEMP, 220,170, 60, 12, WS_BORDER|SS_CENTER
+      LTEXT "Horas", ID_AUTONOMI, 220,190, 60, 12, WS_BORDER|SS_CENTER
+
+      LTEXT "Tensão nominal: ", ID_STATIC, 20, 150, 60, 12, SS_RIGHT
+      LTEXT "Capacidade: ", ID_STATIC, 30, 170, 50, 12, SS_RIGHT
+      LTEXT "Resistência int: ", ID_STATIC, 25, 190, 50, 12, SS_RIGHT
+      LTEXT "Carga actual:", ID_STATIC, 160,150, 50, 12, SS_RIGHT
+      LTEXT "Temperatura:", ID_STATIC, 160,170, 50, 12, SS_RIGHT
+      LTEXT "Autonomia:", ID_STATIC, 160,190, 50, 12, SS_RIGHT
 END
 
 
@@ -156,7 +163,7 @@ BEGIN
       LTEXT "0", ID_WMULT,353, 120, 40, 12, WS_BORDER|SS_CENTER
       LTEXT "0", ID_WCONST, 353, 140, 40, 12, WS_BORDER|SS_CENTER
 
-      PUSHBUTTON "DTR on/off",ID_BTN_DTR,40,180,40,15
+      PUSHBUTTON "Rts on/off",ID_BTN_RTS,40,180,40,15
 
 END
 
@@ -168,8 +175,8 @@ STYLE DS_CONTROL|WS_CHILD
 
 BEGIN
   //    LTEXT "", ID_UMODE, 220, 10, 22, 12, SS_CENTER
-      GROUPBOX "Tensão", ID_STATIC,10,20, 200, 150, BS_GROUPBOX
-      GROUPBOX "Intensidade", ID_STATIC,220,20, 200, 150, BS_GROUPBOX
+      GROUPBOX "Tensão", ID_STATIC,10,20, 200, 100, BS_GROUPBOX
+      GROUPBOX "Intensidade", ID_STATIC,220,20, 200, 100, BS_GROUPBOX
       LTEXT "V_off:", ID_STATIC, 20, 40, 60, 12, SS_RIGHT
       LTEXT "V_float:", ID_STATIC, 20, 60, 60, 12, SS_RIGHT
       LTEXT "V_oct:", ID_STATIC, 20, 80, 60, 12, SS_RIGHT
@@ -182,6 +189,24 @@ BEGIN
       LTEXT  "",ID_ITRIC, 315,40, 60, 12, WS_BORDER|SS_CENTER
      LTEXT  "",ID_IBLK, 315,60, 60, 12, WS_BORDER|SS_CENTER
      LTEXT  "",ID_IOCT, 315,80, 60, 12, WS_BORDER|SS_CENTER
+
+      LTEXT "disparo:", ID_STATIC, 20, 100, 60, 12, SS_RIGHT
+    LTEXT "", ID_ON, 85,100, 60, 12, WS_BORDER|SS_CENTER
+
+     GROUPBOX "Read Loop Counter", ID_STATIC,10,130, 100, 90, BS_GROUPBOX
+     COMBOBOX ID_LOOPCNT, 20, 150, 40, 55, CBS_DROPDOWNLIST | WS_TABSTOP|WS_VSCROLL
+     CTEXT "Numero de leituras para valor médio de dados:", -1, 17,180, 80, 20
+     PUSHBUTTON "Set default", ID_DEFAULT, 20, 200, 50, 12
+
+     GROUPBOX "Data refresh rate", ID_STATIC,120,130, 100, 90, BS_GROUPBOX
+      COMBOBOX ID_REFRESH, 150, 150, 40, 55, CBS_DROPDOWNLIST | WS_TABSTOP|WS_VSCROLL
+     CTEXT "frequência de actualização dos dados", -1, 130, 180, 80, 20
+
+    GROUPBOX "", ID_STATIC,230,130, 130, 90, BS_GROUPBOX
+
+     DEFPUSHBUTTON "OK", ID_OK, 380, 140, 50, 14
+     PUSHBUTTON "Cancel", ID_CANCEL, 380, 170, 50, 14
+     PUSHBUTTON "Help", ID_HELP, 380, 200, 50, 14
 
 END
 
