--- a/monitor/Resource.rc
+++ b/monitor/Resource.rc
@@ -13,13 +13,13 @@
 #include "resource.h"
 
 
-DLG_MAIN DIALOGEX 6, 5, 470, 290
+DLG_MAIN DIALOGEX 6, 5, 450, 260
 CAPTION "Control de carga V 0.0"
 FONT 8, "Tahoma"
 STYLE DS_MODALFRAME | WS_MINIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU|WS_VISIBLE
 
 BEGIN
-     CONTROL "Tab",IDC_TABCTRL,"SysTabControl32",WS_CHILD |WS_VISIBLE,10,10,450,260
+     CONTROL "Tab",IDC_TABCTRL,"SysTabControl32",WS_CHILD |WS_VISIBLE,0,0,450,260
 END
 
 
@@ -27,7 +27,7 @@ END
 
 
 
-DLG_MONITOR DIALOGEX 5, 18, 440, 220
+DLG_MONITOR DIALOGEX 0, 13, 450, 248
 CAPTION "Monitor"
 FONT 8, "Tahoma"
 STYLE DS_CONTROL|WS_CHILD|WS_VISIBLE//|DS_MODALFRAME
@@ -38,7 +38,7 @@ BEGIN
      LTEXT "Uout:", ID_UOUT, 270,130, 60, 12, WS_BORDER|SS_CENTER
      LTEXT "Iout:", ID_IOUT, 270,145, 60, 12, WS_BORDER|SS_CENTER
      LTEXT "Temp:", ID_TEMP, 270,160, 60, 12, WS_BORDER|SS_CENTER
-
+     LTEXT "Status", ID_STATUS, 20, 220, 100, 12, SS_CENTER
 END
 
 
