Add Charge status to monitor data

--- a/monitor/Resource.rc
+++ b/monitor/Resource.rc
@@ -38,7 +38,7 @@ BEGIN
      LTEXT "Uout:", ID_UOUT, 270,130, 60, 12, WS_BORDER|SS_CENTER
      LTEXT "Iout:", ID_IOUT, 270,145, 60, 12, WS_BORDER|SS_CENTER
      LTEXT "Temp:", ID_TEMP, 270,160, 60, 12, WS_BORDER|SS_CENTER
-     LTEXT "Status", ID_STATUS, 20, 220, 100, 12, SS_CENTER
+     LTEXT "Status", ID_STATUS, 200, 100, 60, 12, WS_BORDER|SS_CENTER
 END
 
 
